--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
  <br>
  <canvas id="Canvas1"></canvas>
  <br>
- <select id="setsize" style="font-size: 3vw">
-    <option value="6">6Random</option>
-    <option value="10">10Random</option>
-    <option value="7">7User</option>
-    <option value="9">9Down</option>
+<label for="setsize" style="font-size: 2vw">Edit Data Set</label>
+ <select id="setsize" style="font-size: 2vw">
+    <option value="6">6 Random</option>
+    <option value="10">10 Random</option>
+    <option value="7">7 UserInput</option>
+    <option value="9">9 Decrease</option>
   </select>
 
 <script>
