--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
   <button id="generate" onclick="gen()">
      <img src="gen100.png" style="width: 6vw; height: 6vh;">
   </button>
-
   <br>
   <input type="range" id="speed" min="1" max="6" value="4" style="width: 18%">
- 
  <br>
  <canvas id="Canvas1"></canvas>
  <br>
-<label for="setsize" style="font-size: 2vw">Edit Data Set</label>
+ <input type="text" id="myText" style="width: 75%">
+ <br>
+ <label for="setsize" style="font-size: 2vw">Edit Data Set</label>
  <select id="setsize" style="font-size: 2vw">
     <option value="6">6 Random</option>
     <option value="10">10 Random</option>
@@ -52,7 +52,7 @@ const choiceAlg=document.getElementById('algorithm')
 const choiceSize=document.getElementById('setsize')
 const sortButton=document.getElementById('sort')
 const speedDelay=document.getElementById('speed')
-
+const textBox=speedDelay=document.getElementById('myText')
 var arr=[], copy=[]
 
 var work=false, sorted, chartType=1
