--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <br>
   <input type="range" id="speed" min="1" max="6" value="4" style="width: 18%">
  <br>
- <canvas id="Canvas1"></canvas>
+ <canvas id="Canvas1" style="border: 1px"></canvas>
  <br>
  <textarea id="myText" rows="5" style="width: 95%"></textarea>
  <br>
@@ -94,9 +94,18 @@ function display(item){
   ct1.fillStyle="black"
   ct1.font="3vw Monospace"
   ct1.fillText(steps,0,.2*c1.height)
-  ct1.font="4vw Monospace"
+ 
+  
   if(choiceAlg.value=="Bubble"){
     textBox.value="Bubble sort is ..." }
+  if(choiceAlg.value=="Selection"){
+    textBox.value="Selection sort is ..." }
+  if(choiceAlg.value=="Insert"){
+    textBox.value="Insert sort is ...
+      line2
+      line3" }
+
+  ct1.font="4vw Monospace"
   for(i=0;i<size;i++){
     ct1.fillStyle=item[i].col
     if(chartType==1){
