--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <br>
   <input type="range" id="speed" min="1" max="6" value="4" style="width: 18%">
  <br>
- <canvas id="Canvas1" style="border: 1px"></canvas>
+ <canvas id="Canvas1" style="border: 1px solid"></canvas>
  <br>
  <textarea id="myText" rows="5" style="width: 95%"></textarea>
  <br>
@@ -96,7 +96,7 @@ function display(item){
  
   
   if(choiceAlg.value=="Bubble"){
-    textBox.value="Bubble sort is ..." }
+    textBox.value="Bubble sort is ...\n It is O(n*n) complexity" }
   if(choiceAlg.value=="Selection"){
     textBox.value="Selection sort is ..." }
   if(choiceAlg.value=="Insert"){
