--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 const c1 = document.getElementById("Canvas1")
 const ct1 = c1.getContext("2d")
 c1.width=Math.floor(.98*window.innerWidth)
-c1.height=Math.floor(.6*window.innerHeight)
+c1.height=Math.floor(.5*window.innerHeight)
 const boxWidth=Math.floor(.08*window.innerWidth)
 const choiceAlg=document.getElementById('algorithm')
 const choiceSize=document.getElementById('setsize')
@@ -68,7 +68,7 @@ function gen(){
   for(i=0;i<size;i++){
    arr[i]={val: 9-i,
            x: boxWidth*(i+1),
-           y: Math.floor(.4*c1.height),
+           y: Math.floor(.6*c1.height),
            col: initCol[i%2]
           }
   }
@@ -77,7 +77,7 @@ function gen(){
    for(i=0;i<size;i++){
     arr[i]={val: Math.floor(1+Math.random()*9),
             x: boxWidth*(i+1),
-            y: Math.floor(.4*c1.height),
+            y: Math.floor(.6*c1.height),
             col: initCol[i%2]
            }
      if(size==7){arr[i].val=prompt("Enter item "+(i+1) ) }
@@ -92,7 +92,7 @@ function display(item){
   ct1.clearRect(0,0,c1.width,c1.height)
   ct1.fillStyle="black"
   ct1.font="3vw Monospace"
-  ct1.fillText(steps,0,.2*c1.height)
+  ct1.fillText(steps,.9*c1.width,.2*c1.height)
  
   
   if(choiceAlg.value=="Bubble"){
