--- a/index.html
+++ b/index.html
@@ -99,13 +99,17 @@ function display(item){
  
   
   if(choiceAlg.value=="Bubble"){
-    text1.value="Bubble sort is ...\n It is O(n*n) complexity" }
-    text2.value="Compare item[n] to item[n+1]" }
+    text1.value="Bubble sort is ...\n It is O(n*n) complexity"
+    text2.value="Compare item[n] to item[n+1]"
+  }
   if(choiceAlg.value=="Selection"){
-    text1.value="Selection sort is ..." }
-    text2.value="find lowest item" }
+    text1.value="Selection sort is ..." 
+    text2.value="find lowest item"
+  }
   if(choiceAlg.value=="Insert"){
-    text1.value="loop ..." }
+    text1.value="Insert ..."
+    text2.value="Insert ..."
+  }
 
   ct1.font="4vw Monospace"
   for(i=0;i<size;i++){
