--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ function display(item){
   ct1.fillText(steps,.9*c1.width,.2*c1.height)
   
   if(choiceAlg.value=="Bubble"){
-    text1.value="Bubble sort is ...\n It is O(n*n) complexity"
-    text2.value="Compare item[n] to item[n+1]"
+    text1.value="Bubble sort is ...\n It is O(n*n) complexity in worst case"
+    text2.value="Comparing 1st and 2nd element\n-swap if 1st element is greater\nRepeat for each pair\nIf any swaps done then restart process"
   }
     if(choiceAlg.value=="Insertion"){
     text1.value="Insert ..."
