--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <option value="Insertion">Insertion Sort</option>
     <option value="Selection">Selection Sort</option>
   </select>
-  <button id="barchart">
-     <img src="slide100.png" onclick="chart()" style="width: 10vw; height: 6vh;">
+  <button id="slider">
+     <img src="slider1.png" onclick="chart()" style="width: 10vw; height: 6vh;">
   </button>
   <button id="generate" onclick="gen()">
      <img src="gen100.png" style="width: 6vw; height: 6vh;">
@@ -51,6 +51,7 @@ const boxWidth=Math.floor(.08*window.innerWidth)
 const choiceAlg=document.getElementById('algorithm')
 const choiceSize=document.getElementById('setsize')
 const sortButton=document.getElementById('sort')
+const sliderButton=document.getElementById('slider')
 const speedDelay=document.getElementById('speed')
 const text1=document.getElementById('myText1')
 const text2=document.getElementById('myText2')
@@ -262,6 +263,8 @@ function swap(a,b){
   function chart(){
     chartType=-chartType
     display(arr)
+    if (chartType==1){slider.innerHtml='<img src="slider1.png">' }
+    else{slider.innerHtml='<img src="slider2.png">' }
   }
 function finish(){
   for (f=0;f<size;f++){arr[f].col=sortCol}
