--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ function swap(a,b){
     chartType=-chartType
     display(arr)
     if (chartType==1){slider.innerHTML='<img src="slider1.png" style="width: 10vw; height: 6vh;>' }
-    else{slider.innerHTML='<img src="slider2.png"> style="width: 10vw; height: 6vh;' }
+    else{slider.innerHTML='<img src="slider2.png" style="width: 10vw; height: 6vh;>' }
   }
 function finish(){
   for (f=0;f<size;f++){arr[f].col=sortCol}
