--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <img src="next100.png" style="width: 7vw; height: 7vh;">
     </button>
   
-  <select id="algorithm" style="font-size: 3vw">
+  <select id="algorithm" onchange="describe()" style="font-size: 3vw">
     <option value="Bubble">Bubble Sort</option>
     <option value="Insertion">Insertion Sort</option>
     <option value="Selection">Selection Sort</option>
