--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
      <img src="next100.png" style="width: 7vw; height: 7vh;">
     </button>
   
-  <select id="algorithm" style="font-size: 3vw">
+  <select id="algorithm" onchange="describe()" style="font-size: 3vw">
     <option value="Bubble">Bubble Sort</option>
     <option value="Insertion">Insertion Sort</option>
     <option value="Selection">Selection Sort</option>
@@ -61,7 +61,8 @@ var work=false, sorted, chartType=1
 const sortCol="green", wrongCol="red", checkCol="orange"
 const initCol=["brown","purple"]
 var p,steps=0, delay, go=0
-
+  
+describe()
 gen()
  
 function gen(){
@@ -89,16 +90,10 @@ function gen(){
  }
   steps=0
   display(arr)
-  
 }
- 
-function display(item){
-  ct1.clearRect(0,0,c1.width,c1.height)
-  ct1.fillStyle="black"
-  ct1.font="3vw Monospace"
-  ct1.fillText(steps,.9*c1.width,.2*c1.height)
-  
-  if(choiceAlg.value=="Bubble"){
+
+function describe(){
+     if(choiceAlg.value=="Bubble"){
     text1.value="Bubble sort is ...\n It is O(n*n) complexity in worst case"
     text2.value="Comparing 1st and 2nd element\n-swap if 1st element is greater\nRepeat for each pair\nIf any swaps done then restart process"
   }
@@ -110,7 +105,14 @@ function display(item){
     text1.value="Selection sort is ..." 
     text2.value="find lowest item"
   }
-
+}
+ 
+function display(item){
+  ct1.clearRect(0,0,c1.width,c1.height)
+  ct1.fillStyle="black"
+  ct1.font="3vw Monospace"
+  ct1.fillText(steps,.9*c1.width,.2*c1.height)
+  
   ct1.font="4vw Monospace"
   for(i=0;i<size;i++){
     ct1.fillStyle=item[i].col
