--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
  <br>
  <canvas id="Canvas1" style="border: 1px solid"></canvas>
  <br>
- <textarea id="myText1" rows="12" style="width: 49%"></textarea>
- <textarea id="myText2" rows="12" style="width: 49%"></textarea>
+ <textarea id="myText1" rows="12" style="resize: none; width: 49%"></textarea>
+ <textarea id="myText2" rows="12" style="resize: none; width: 49%"></textarea>
  <br>
  <label for="setsize" style="font-size: 2vw">Edit Data Set</label>
  <select id="setsize" style="font-size: 2vw">
