--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <button id="stop" onclick="stopSort()">
      <img src="stop100.png" style="width: 7vw; height: 7vh;">
     </button>
-  <button id="last">
+  <button id="last" onclick="back()">
      <img src="last100.png" style="width: 7vw; height: 7vh;">
     </button>
   <button id="next" onclick="onePlay()">
@@ -55,7 +55,7 @@ const sortButton=document.getElementById('sort')
 const speedDelay=document.getElementById('speed')
 const text1=document.getElementById('myText1')
 const text2=document.getElementById('myText2')
-var arr=[], copy=[]
+var arr=[], oldarr=[], copy=[]
 
 var work=false, sorted, chartType=1
 const sortCol="green", wrongCol="red", checkCol="orange"
@@ -89,6 +89,7 @@ function gen(){
    }
  }
   steps=0
+  oldarr=JSON.parse( JSON.stringify(arr) )
   display(arr)
 }
 
@@ -145,6 +146,7 @@ function oneSort(){
   if(work){ return }
   if(arr[size-1].col==sortCol){ return }
   work=true
+  oldarr=JSON.parse( JSON.stringify(arr) )
   delay=+(speedDelay.value)*200
   if(choiceAlg.value=="Bubble"){ bubbleSort() }
   if(choiceAlg.value=="Insertion"){ arr[0].col=sortCol; insertSort( sortedUpTo(arr) ) }
@@ -261,12 +263,10 @@ function swap(a,b){
    arr[a].val=arr[b].val
    arr[b].val=temp
 }
-
-  function chart(){
-    chartType=-chartType
-    display(arr)
-  }
-  
+function back(){
+  arr=JSON.parse( JSON.stringify(oldarr) )
+  display(arr)
+}
 function finish(){
   for (f=0;f<size;f++){arr[f].col=sortCol}
   display(arr)
